--- a/readme
+++ b/readme
@@ -1,1 +1,32 @@
-Aaa
+# Esquema Conceitual para Oficina Mecânica
+
+Este repositório contém o esquema conceitual para o sistema de controle e gerenciamento de ordens de serviço de uma oficina mecânica. O objetivo é modelar as entidades e seus relacionamentos para atender aos requisitos descritos na narrativa.
+
+## 📋 Descrição do Desafio
+
+O sistema foi projetado para gerenciar:
+- Clientes e seus veículos.
+- Ordens de serviço, incluindo informações como status, valores e datas.
+- Equipes e mecânicos responsáveis pela execução dos serviços.
+- Serviços e peças utilizados em cada OS.
+
+## 🗂 Estrutura do Banco de Dados
+
+### Entidades e Relacionamentos
+- **Cliente**: Gerencia informações dos clientes.
+- **Veículo**: Vinculado ao cliente.
+- **Ordem de Serviço (OS)**: Representa o trabalho realizado.
+- **Equipe**: Responsável pela execução dos serviços.
+- **Mecânico**: Parte integrante de uma equipe.
+- **Serviço**: Atividades realizadas conforme tabela de referência.
+- **Peça**: Componentes necessários para reparos.
+
+### Diagrama Conceitual
+
+### 📦 Tecnologias Utilizadas
+- **MySQL Workbench**: Para modelagem do banco de dados.
+- **GitHub**: Para versionamento e apresentação do projeto.
+
+## ✍️ Autor
+Desenvolvido por **[Seu Nome]**.  
+[LinkedIn](https://www.linkedin.com/in/seu-perfil) | [GitHub](https://github.com/seu-usuario)
